[package]
name = "klog"
version = "0.4.0"
edition = "2021"
authors = ["Tobias Frölich <hi@froelich.dev>"]
repository = "https://github.com/tobifroe/klog"
description = "klog is a tool that allows you to tail logs of multiple Kubernetes pods simultaneously."
readme = "README.md"
license = "MIT"

[dependencies]
kube = { version = "=0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.24.0", features = ["latest"] }
tokio = { version = "=1.43.0", features = ["full"] }
anyhow = "=1.0.95"
futures-util = "=0.3"
colored = "=3.0.0"
clap = { version = "=4.5.27", features = ["derive"] }
rand = "=0.8.5"
itertools = "=0.14.0"
