[package]
name = "klog"
version = "0.4.2"
edition = "2021"
authors = ["Tobias Frölich <hi@froelich.dev>"]
repository = "https://github.com/tobifroe/klog"
description = "klog is a tool that allows you to tail logs of multiple Kubernetes pods simultaneously."
readme = "README.md"
license = "MIT"

[dependencies]
kube = { version = "=0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.24.0", features = ["latest"] }
tokio = { version = "=1.45.1", features = ["full"] }
anyhow = "=1.0.98"
futures-util = "=0.3"
colored = "=3.0.0"
clap = { version = "=4.5.39", features = ["derive"] }
rand = "=0.9.1"
itertools = "=0.14.0"
