[package]
name = "klog"
version = "0.6.0"
edition = "2021"
authors = ["Tobias Frölich <hi@froelich.dev>"]
repository = "https://github.com/tobifroe/klog"
description = "klog is a tool that allows you to tail logs of multiple Kubernetes pods simultaneously."
readme = "README.md"
license = "MIT"

[features]
integration-tests = []

[dependencies]
kube = { version = "=1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.25.0", features = ["latest"] }
tokio = { version = "=1.49.0", features = ["full"] }
tokio-util = { version = "=0.7", features = ["rt"] }
anyhow = "=1.0.100"
futures-util = "=0.3"
colored = "=3.1.1"
clap = { version = "=4.5.55", features = ["derive"] }
rand = "=0.9.2"
itertools = "=0.14.0"
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
colored_json = "=5"
async-trait = "=0.1"
